--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <h1 class="title">2023 신년계획</h1>
     <p class="msg">올해는 꼭 성공하자!</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1 center">킹피스 3000레벨 찍기</div>
+        <div class="bucket img1 center done">킹피스 3000레벨 찍기</div>
         <div class="bucket img2 center">학교의 흐름 바꾸기</div>
         <div class="bucket img2 center">내 이메일 새로 만들기</div>
         <div class="bucket img1 center">LOL계정만들기</div>
